spade-tests/src/snapshots/spade_tests__typeinference__wal_trace_clk_must_be_clock.snap
---
source: spade-tests/src/typeinference.rs
---
#[wal_traceable(suffix = __)]
struct T {}
fn test(t: T, x: bool) -> bool {
    #[wal_trace(clk=x)]
    let t = t;
    false
}


error: Expected type clock, got bool
  ┌─ testinput:4:21
  │
4 │     #[wal_trace(clk=x)]
  │                     ^ Expected clock here


