spade-tests/src/snapshots/spade_tests__typeinference__wrong_index_size_on_memory_write_port_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
use std::mem::clocked_memory;
entity test(clk: clock, idx: int<32>) -> int<8> {
    let mem: Memory<int<8>, 16> = inst clocked_memory(clk, [(true, idx, 0)]);
    0
}


error: Expected type [(_, int<32>, _); _], got [(_, int<4>, _); _]
  ┌─ testinput:3:60
  │
3 │     let mem: Memory<int<8>, 16> = inst clocked_memory(clk, [(true, idx, 0)]);
  │                                                            ^^^^^^^^^^^^^^^^ Expected [(_, int<32>, _); _], got [(_, int<4>, _); _]
  │
  = note: because the value is used as an index to a memory


