spade-tests/src/snapshots/spade_tests__typeinference__wrong_number_of_args_to_uint_bits_to_fit_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn test() {
    let x: uint<{uint_bits_to_fit(256, 2)}> = 0u10;
}


error: This function takes one argument, 2 provided
  ┌─ testinput:2:34
  │
2 │     let x: uint<{uint_bits_to_fit(256, 2)}> = 0u10;
  │                                  ^^^^^^^^ Expected 1 argument
